# dotbrowser

./: .gitignore  CLAUDE.md  LICENSE  README.md  ROADMAP.md  TODO.md  flake.nix  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-05-27-cli-help-and-claude-guide.md  2026-05-27-live-apply-browser-ui-routing.md  2026-05-27-live-apply-without-restart.md  2026-05-27-unified-live-apply-no-manual-flags.md  2026-05-27-vivaldi-shortcuts-bootstrap.md
docs/superpowers/specs/: 2026-05-27-cli-help-and-claude-guide-design.md  2026-05-27-live-apply-browser-ui-routing-design.md  2026-05-27-live-apply-without-restart-design.md  2026-05-27-unified-live-apply-no-manual-flags-design.md  2026-05-27-vivaldi-shortcuts-bootstrap-design.md
examples/: brave.settings.toml  brave.shortcuts.toml  brave.toml  vivaldi.toml
examples/brave/: all.toml  pwa.toml  settings.toml  shortcuts.toml
examples/chrome/: all.toml  settings.toml
examples/edge/: all.toml  settings.toml
examples/vivaldi/: all.toml  pwa.toml  settings.toml  shortcuts.toml
scripts/: generate_brave_command_ids.py
src/dotbrowser/: __main__.py  cli.py
src/dotbrowser/_base/: cdp.py  chromium_live.py  live_apply.py  orchestrator.py  process.py  pwa.py  settings.py  utils.py
src/dotbrowser/brave/: __init__.py  command_ids.py  live.py  pwa.py  settings.py  shortcuts.py  utils.py
src/dotbrowser/chrome/: __init__.py  live.py  pwa.py  settings.py  utils.py
src/dotbrowser/edge/: __init__.py  live.py  pwa.py  settings.py  utils.py
src/dotbrowser/vivaldi/: __init__.py  live.py  pwa.py  schema.py  settings.py  shortcuts.py  utils.py
tests/: conftest.py  test_apply_live.py  test_brave_channel.py  test_brave_live.py  test_cdp.py  test_chrome_apply.py  test_chromium_live.py  test_edge_apply.py  test_error_messages.py  test_export.py  test_help.py  test_init.py  test_live_apply.py  test_live_launch.py  test_logic.py  test_platform.py  test_pwa_apply.py  test_restore.py  test_settings_apply.py  test_smoke.py  test_unified_apply.py  test_url_config.py  test_vivaldi_apply.py  test_vivaldi_live.py  test_vivaldi_logic.py  test_vivaldi_schema.py
